Fin de la stylisation de la page index.html et page2.html

--- a/page2.html
+++ b/page2.html
@@ -18,28 +18,27 @@
 	</head>
 	<body>
 		<header class="header-menu">
-			<i class="fa-solid fa-arrow-left"></i>
-			<div class="logo">
-				<img src="images/logo/ohmyfood.png" alt="logo">
+			<i class="fa-solid fa-arrow-left icone-flèche"><a href="index.html"></a></i>
+			<div class="flex-center logo">
+				<a href="index.html"><img src="images/logo/ohmyfood.png" alt="logo"></a>
 			</div>
 			<div class="img-header">
 				<img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Image du plat">
 			</div>
 		</header>
 		<div class="fond-gris-menu">
-			
-				<div class="titre-menu">
-					<h1> La palette du goût</h1>
-					<i class="far fa-heart fa-1x heart-grand"></i>
-				</div>
-				<section>
-					
-					<h2 class="font-color-size">Entrées</h2>
+			<div class="titre-menu">
+				<h1> La palette du goût</h1>
+				<i class="fa-thin far fa-heart fa-1x heart-grand"></i>
+			</div>
+			<section>
+				<h2 class="font-color-size">Entrées</h2>
 				<div class="border-bottom"></div>
-				<div class="flex-center">	
-						<article class="fond-blanc-plats">
-							<div class="description-menu">
-								<div class="text">
+				<div class="flex-center">
+					<article class="fond-blanc-plats">
+						<a href="#">
+							<div class="text">
+								<div>
 									<h3>Fricassée d'escargot</h3>
 									<p>
 										Au piment d'espelette
@@ -54,179 +53,193 @@
 						</article>
 					</div>
 					<div class="flex-center">
-					<article class="fond-blanc-plats">
-						<div class="description-menu">
-							<div class="text">
-								<h3>Foie gras de canard mi-cuit</h3>
-								<p>
-									Et ses copeaux de truffe noire
-								</p>
+						<article class="fond-blanc-plats">
+							<div class="description-menu">
+								<a href="#">
+									<div class="text">
+										<h3>Foie gras de canard mi-cuit</h3>
+										<p>
+											Et ses copeaux de truffe noire
+										</p>
+									</div>
+									<div class="prix">
+										<p>
+											35€
+										</p>
+									</div>
+								</a>
 							</div>
-							<div class="prix">
-								<p>
-									35€
-								</p>
+						</article>
+					</div>
+					<div class="flex-center">
+						<article class="fond-blanc-plats">
+							<div class="description-menu">
+								<a href="#">
+									<div class="text">
+										<h3>Oeufs au plat</h3>
+										<p>
+											Assaisonné sur lit de caviar
+										</p>
+									</div>
+									<div class="prix">
+										<p>
+											20€
+										</p>
+									</div>
+								</a>
 							</div>
-						</div>
-					</article>
-				</div>
-				<div class="flex-center">
-					<article class="fond-blanc-plats">
-						<div class="description-menu">
-						<div class="text">
-						<h3>Oeufs au plat</h3>
-						<p>--------
-							Assaisonné sur lit de caviar
-						</p>
+						</article>
 					</div>
-					<div class="prix">
-						<p>
-							20€
-						</p>
-						</div>
-					</div>
-					</article>
-				</div>
 				</section>
-			
-			<div>
-				<section>
-					
-					<h2 class="font-color-size">Plats</h2>
-				<div class="border-bottom"></div>
+				<div>
+					<section>
+						<h2 class="font-color-size">Plats</h2>
+						<div class="border-bottom"></div>
+						<div class="flex-center">
+							<article class="fond-blanc-plats">
+								<div class="description-menu">
+									<a href="#">
+										<div class="text">
+											<h3>Filet de boeuf aux herbes</h3>
+											<p>
+												Accompagné de sa ribambelle de légumes
+											</p>
+										</div>
+										<div class="prix">
+											<p>
+												40€
+											</p>
+										</div>
+									</a>
+								</div>
+							</article>
+						</div>
+						<div class="flex-center">
+							<article class="fond-blanc-plats">
+								<div class="description-menu">
+									<a href="#">
+										<div class="text">
+											<h3>Parmentier de queue de boeuf</h3>
+											<p>
+												À la truffe noire sur sa purée de panais
+											</p>
+										</div>
+										<div class="prix">
+											<p>
+												35€
+											</p>
+										</div>
+									</a>
+								</div>
+							</article>
+						</div>
+						<div class="flex-center">
+							<article class="fond-blanc-plats">
+								<div class="description-menu">
+									<a href="#">
+										<div class="text">
+											<h3>Filet de turbot</h3>
+											<p>
+												Aux agrumes
+											</p>
+										</div>
+										<div class="prix">
+											<p>
+												44€
+											</p>
+										</div>
+									</a>
+								</div>
+							</article>
+						</div>
+					</section>
+				</div>
+				<div>
+					<section>
+						<h2 class="font-color-size">Desserts</h2>
+						<div class="border-bottom"></div>
+						<div class="flex-center">
+							<article class="fond-blanc-plats">
+								<div class="description-menu">
+									<a href="#">
+										<div class="text">
+											<h3>Paris-Brest</h3>
+											<p>
+												Revisité
+											</p>
+										</div>
+										<div class="prix">
+											<p>
+												18€
+											</p>
+										</div>
+									</a>
+								</div>
+							</article>
+						</div>
+						<div class="flex-center">
+							<article class="fond-blanc-plats">
+								<div class="description-menu">
+									<a href="#">
+										<div class="text">
+											<h3>Macaron au chocolat d'exception </h3>
+											<p>
+												Et glace à la vanille de Madagascar
+											</p>
+										</div>
+										<div class="prix">
+											<p>
+												22€
+											</p>
+										</div>
+									</a>
+								</div>
+							</article>
+						</div>
+						<div class="flex-center">
+							<article class="fond-blanc-plats">
+								<div class="description-menu">
+									<a href="#">
+										<div class="text">
+											<h3>Mousse au chocolat</h3>
+											<p>
+												Au piment d'espelette et à la truffe noire
+											</p>
+										</div>
+										<div class="prix">
+											<p>
+												25€
+											</p>
+										</div>
+									</a>
+								</div>
+							</article>
+						</div>
+					</section>
+				</div>
 				<div class="flex-center">
-					<article class="fond-blanc-plats">
-						<div class="description-menu">
-							<div class="text">
-						<h3>Filet de boeuf aux herbes</h3>
+					<div class="btn flex-center">
 						<p>
-							Accompagné de sa ribambelle de légumes
+							Commander
 						</p>
 					</div>
-					<div class="prix">
-						<p>
-							40€
-						</p>
-					</div>	
 				</div>
-					</article>
-				</div>
-				<div class="flex-center">
-					<article class="fond-blanc-plats">
-						<div class="description-menu">
-							<div class="text">
-						<h3>Parmentier de queue de boeuf</h3>
-						<p>
-							À la truffe noire sur sa purée de panais
-						</p>
-							</div>
-							<div class="prix">
-						<p>
-							35€
-						</p>
-						</div>
+			</div>
+			<footer class="fond-footer">
+				<h4> ohmyfood</h4>
+				<ul>
+					<li>
+						<i class="fa-solid fa-utensils"></i>
+						<a href="#" class="texte-blanc">Proposer un restaurant</a>
+					</li>
+					<li>
+						<i class="fa-solid fa-handshake-angle"></i>
+						<a href="#">Devenir partenaire</a>
+					</li>
+					<li><a href="#"> Mentions légales</a></li>
+					<li><a href="mailto:test@test.com"> Contact</a></li>
+				</ul>
+			</footer>
+		</body>
+	</html>
 
-					</div>
-					</article>
-				</div>
-				<div class="flex-center">
-					<article class="fond-blanc-plats">
-						<div class="description-menu">
-							<div class="text">
-						<h3>Filet de turbot</h3>
-						<p>
-							Aux agrumes
-						</p>
-					</div>
-						<div class="prix">
-						<p>
-							44€
-						</p>
-					</div>
-					</div>
-					</article>
-				</div>
-				</section>
-			</div>
-			<div>
-				<section>
-					<h2 class="font-color-size">Desserts</h2>
-				<div class="border-bottom"></div>
-				<div class="flex-center">	
-					<article class="fond-blanc-plats">
-						<div class="description-menu">
-							<div class="text">
-						<h3>Paris-Brest</h3>
-						<p>
-							Revisité
-						</p>
-							</div>
-							<div class="prix">
-						<p>
-							18€
-						</p>
-					</div>
-					</div>
-					</article>
-				</div>
-				<div class="flex-center">
-					<article class="fond-blanc-plats">
-						<div class="description-menu">
-							<div class="text">
-						<h3>Macaron au chocolat d'exception </h3>
-						<p>
-							Et glace à la vanille de Madagascar
-						</p>
-					</div>
-					<div class="prix">
-						<p>
-							22€
-						</p>
-					</div>
-					</div>
-					</article>
-				</div>
-				<div class="flex-center">
-					<article class="fond-blanc-plats">
-						<div class="description-menu">
-						<div class="text">
-						<h3>Mousse au chocolat</h3>
-						<p>
-							Au piment d'espelette et à la truffe noire
-						</p>
-					</div>
-					<div class="prix">
-						<p>
-							25€
-						</p>
-					</div>
-				</div>
-					</article>
-				</div>
-				</section>
-			</div>
-			<div class="flex-center">
-			<div class="btn flex-center">
-				<p>
-					Commander
-				</p>
-			</div>
-		</div>
-		</div>
-		<footer class="fond-footer">
-			<h4> ohmyfood</h4>
-			<ul>
-				<li>
-					<i class="fa-solid fa-utensils"></i>
-					<a href="#">Proposer un restaurant</a>
-				</li>
-				<li>
-					<i class="fa-solid fa-handshake-angle"></i>
-					<a href="#">Devenir partenaire</a>
-				</li>
-				<li><a href="#"> Mentions légales</a></li>
-				<li><a href="mailto:test@test.com"> Contact</a></li>
-			</ul>
-		</footer>
-	</body>
-</html>
