--- a/page3.html
+++ b/page3.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset='utf-8'>
 		<meta http-equiv='X-UA-Compatible' content='IE=edge'>
-		<title>Ohmyfood - La palette du goût</title>
+		<title>Ohmyfood - La note enchantée</title>
 		<meta name='viewport' content='width=device-width, initial-scale=1'>
 		<link rel='stylesheet' type='text/css' media='screen' href='style.css'>
 		<link rel='stylesheet' type='text/css' media='screen' href='menus.css'>
@@ -28,12 +28,12 @@
 				<img src="images/logo/ohmyfood.png" alt="logo">
 			</div>
 			<div class="header__img">
-				<img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Image du plat">
+				<img src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Image du plat">
 			</div>
 		</header>
 		<div class="menu__fond">
 			<div class="menu__titre">
-				<h1> La palette du goût</h1>
+				<h1> La note enchantée</h1>
 				<i class="far fa-heart fa-2x"></i>
 				<i class="fas fa-heart fa-2x"></i>
 			</div>
@@ -46,10 +46,10 @@
 							<div class="plats__description">
 								<a href="#">
 									<div class="plats__text">
-										<h3>Fricassée d'escargot</h3>
+										<h3>Ravioles de foie gras</h3>
 										<div class="ligne-2">
 											<p>
-												Au piment d'espelette
+												Accompagnées de leur crème à la truffe
 											</p>
 											<div class="plats__prix">
 												<p>
@@ -71,14 +71,39 @@
 							<div class="plats__description">
 								<a href="#">
 									<div class="plats__text">
-										<h3>Foie gras de canard mi-cuit</h3>
+										<h3>Caviar osciètre</h3>
 										<div class="ligne-2">
 											<p>
-												Et ses copeaux de truffe noire
+												Sur blini à la farine de blé noir
 											</p>
 											<div class="plats__prix">
 												<p>
 													35€
+												</p>
+												<div class="espace"></div>
+												<div class="plats__check">
+													<i class="fa-solid fa-circle-check"></i>
+												</div>
+											</div>
+										</div>
+									</div>
+								</a>
+							</div>
+						</article>
+					</div>
+                    <div class="flex-center">
+						<article class="plats__fond">
+							<div class="plats__description">
+								<a href="#">
+									<div class="plats__text">
+										<h3>Homar et espuma de potiron</h3>
+										<div class="ligne-2">
+											<p>
+												Mariné aux zestes d'orange
+											</p>
+											<div class="plats__prix">
+												<p>
+													20€
 												</p>
 												<div class="espace"></div>
 												<div class="plats__check">
@@ -96,14 +121,14 @@
 							<div class="plats__description">
 								<a href="#">
 									<div class="plats__text">
-										<h3>Oeufs au plat</h3>
+										<h3>Foie gras de canard cuit entier</h3>
 										<div class="ligne-2">
 											<p>
-												Assaisonné sur lit de caviar
+												Confiture de figue et pain toasté
 											</p>
 											<div class="plats__prix">
 												<p>
-													20€
+													35€
 												</p>
 												<div class="espace"></div>
 												<div class="plats__check">
@@ -127,10 +152,10 @@
 							<div class="plats__description">
 								<a href="#">
 									<div class="plats__text">
-										<h3>Filet de boeuf aux herbes</h3>
+										<h3>Noix de coquilles Saint-Jacques</h3>
 										<div class="ligne-2">
 											<p>
-												Accompagné de sa ribambelle de légumes
+												Sur un lit de céleri-rave
 											</p>
 											<div class="plats__prix">
 												<p>
@@ -152,10 +177,10 @@
 							<div class="plats__description">
 								<a href="#">
 									<div class="plats__text">
-										<h3>Parmentier de queue de boeuf</h3>
+										<h3>Langoustine poêlée</h3>
 										<div class="ligne-2">
 											<p>
-												À la truffe noire sur sa purée de panais
+												Purée de patate douce
 											</p>
 											<div class="plats__prix">
 												<p>
@@ -177,10 +202,10 @@
 							<div class="plats__description">
 								<a href="#">
 									<div class="plats__text">
-										<h3>Filet de turbot</h3>
+										<h3>Mijoté de queue de boeuf</h3>
 										<div class="ligne-2">
 											<p>
-												Aux agrumes
+												Et riz sauvage aux zestes de citron
 											</p>
 											<div class="plats__prix">
 												<p>
@@ -208,10 +233,10 @@
 							<div class="plats__description">
 								<a href="#">
 									<div class="plats__text">
-										<h3>Paris-Brest</h3>
+										<h3>Macaron noisette et chocolat</h3>
 										<div class="ligne-2">
 											<p>
-												Revisité
+												Glace au caramel brun et sel de Guérande
 											</p>
 											<div class="plats__prix">
 												<p>
@@ -233,10 +258,10 @@
 							<div class="plats__description">
 								<a href="#">
 									<div class="plats__text">
-										<h3>Macaron au chocolat d'exception </h3>
+										<h3>Baba au rhum revisité</h3>
 										<div class="ligne-2">
 											<p>
-												Et glace à la vanille de Madagascar
+												Avec son coulis de citron
 											</p>
 											<div class="plats__prix">
 												<p>
@@ -258,14 +283,14 @@
 							<div class="plats__description">
 								<a href="#">
 									<div class="plats__text">
-										<h3>Mousse au chocolat</h3>
+										<h3>Tarte au citron meringuée</h3>
 										<div class="ligne-2">
 											<p>
-												Au piment d'espelette et à la truffe noire
+												Destructurée
 											</p>
 											<div class="plats__prix">
 												<p>
-													25€
+													23€
 												</p>
 												<div class="espace"></div>
 												<div class="plats__check">
