--- a/page4.html
+++ b/page4.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset='utf-8'>
 		<meta http-equiv='X-UA-Compatible' content='IE=edge'>
-		<title>Ohmyfood - La palette du goût</title>
+		<title>Ohmyfood - A la française</title>
 		<meta name='viewport' content='width=device-width, initial-scale=1'>
 		<link rel='stylesheet' type='text/css' media='screen' href='style.css'>
 		<link rel='stylesheet' type='text/css' media='screen' href='menus.css'>
@@ -28,12 +28,12 @@
 				<img src="images/logo/ohmyfood.png" alt="logo">
 			</div>
 			<div class="header__img">
-				<img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Image du plat">
+				<img src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Image du plat">
 			</div>
 		</header>
 		<div class="menu__fond">
 			<div class="menu__titre">
-				<h1> La palette du goût</h1>
+				<h1> A la française</h1>
 				<i class="far fa-heart fa-2x"></i>
 				<i class="fas fa-heart fa-2x"></i>
 			</div>
@@ -46,10 +46,10 @@
 							<div class="plats__description">
 								<a href="#">
 									<div class="plats__text">
-										<h3>Fricassée d'escargot</h3>
+										<h3>Tartarre de poulpe acidulé</h3>
 										<div class="ligne-2">
 											<p>
-												Au piment d'espelette
+												Au zeste d'orange
 											</p>
 											<div class="plats__prix">
 												<p>
@@ -71,10 +71,10 @@
 							<div class="plats__description">
 								<a href="#">
 									<div class="plats__text">
-										<h3>Foie gras de canard mi-cuit</h3>
+										<h3>Velouté de légumes d'antan</h3>
 										<div class="ligne-2">
 											<p>
-												Et ses copeaux de truffe noire
+												Carottes, panais, topinambour
 											</p>
 											<div class="plats__prix">
 												<p>
@@ -96,10 +96,10 @@
 							<div class="plats__description">
 								<a href="#">
 									<div class="plats__text">
-										<h3>Oeufs au plat</h3>
+										<h3>Soupe à l'oignon</h3>
 										<div class="ligne-2">
 											<p>
-												Assaisonné sur lit de caviar
+												Revisitée
 											</p>
 											<div class="plats__prix">
 												<p>
@@ -127,10 +127,10 @@
 							<div class="plats__description">
 								<a href="#">
 									<div class="plats__text">
-										<h3>Filet de boeuf aux herbes</h3>
+										<h3>Coquilles Saint-Jacques</h3>
 										<div class="ligne-2">
 											<p>
-												Accompagné de sa ribambelle de légumes
+												Accompagné d'une purée de panais
 											</p>
 											<div class="plats__prix">
 												<p>
@@ -152,10 +152,10 @@
 							<div class="plats__description">
 								<a href="#">
 									<div class="plats__text">
-										<h3>Parmentier de queue de boeuf</h3>
+										<h3>Magret de canard</h3>
 										<div class="ligne-2">
 											<p>
-												À la truffe noire sur sa purée de panais
+												Et parmentier de pommes de terre
 											</p>
 											<div class="plats__prix">
 												<p>
@@ -177,10 +177,10 @@
 							<div class="plats__description">
 								<a href="#">
 									<div class="plats__text">
-										<h3>Filet de turbot</h3>
+										<h3>Pigeonneau d'Ille-et-Vilaine</h3>
 										<div class="ligne-2">
 											<p>
-												Aux agrumes
+												Sur son lit de gnocchis aux légumes
 											</p>
 											<div class="plats__prix">
 												<p>
@@ -208,10 +208,10 @@
 							<div class="plats__description">
 								<a href="#">
 									<div class="plats__text">
-										<h3>Paris-Brest</h3>
+										<h3>Pétales de violettes glacés</h3>
 										<div class="ligne-2">
 											<p>
-												Revisité
+												Et purée de noisette
 											</p>
 											<div class="plats__prix">
 												<p>
@@ -233,10 +233,10 @@
 							<div class="plats__description">
 								<a href="#">
 									<div class="plats__text">
-										<h3>Macaron au chocolat d'exception </h3>
+										<h3>Fondant au chocolat</h3>
 										<div class="ligne-2">
 											<p>
-												Et glace à la vanille de Madagascar
+												Revisité
 											</p>
 											<div class="plats__prix">
 												<p>
@@ -258,14 +258,14 @@
 							<div class="plats__description">
 								<a href="#">
 									<div class="plats__text">
-										<h3>Mousse au chocolat</h3>
+										<h3>Millefeuille croustillant</h3>
 										<div class="ligne-2">
 											<p>
-												Au piment d'espelette et à la truffe noire
+												Myrtilles et pâte d'amande
 											</p>
 											<div class="plats__prix">
 												<p>
-													25€
+													23€
 												</p>
 												<div class="espace"></div>
 												<div class="plats__check">
