--- a/page2.html
+++ b/page2.html
@@ -233,7 +233,11 @@
 							<div class="plats__description">
 								<a href="#">
 									<div class="plats__text">
+										
+										<div class="titre_plats">
 										<h3>Macaron au chocolat d'exception </h3>
+										<div class="espace1"></div>
+										</div>
 										<div class="ligne-2">
 											<p>
 												Et glace à la vanille de Madagascar
